# xgen-harness-executor

./: .gitignore  06-INTEGRATION-GUIDE.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TOOL_GUIDE.md  V2_TESTING.md  pyproject.toml  test_capabilities.py  test_capability_adapter.py  test_capability_resolver_plan.py  test_capability_stage.py  test_compile.py  test_compile_literal_and_ssrf.py  test_decide_terminal_tools.py  test_e2e_capability.py  test_error_codes_stability.py  test_exception_paths.py  test_guards.py  test_integration_runtime.py  test_judge_then_loop.py  test_memory_progress.py  test_node_parameter_control.py  test_pipeline.py  test_plugin_extensibility.py  test_policy_gate.py  test_providers_registry.py  test_public_api.py  test_serialization.py
.cargo/: config.toml
.github/workflows/: build.yml  mirror-to-jinsoo96.yml  publish-user-wheel.yml  publish.yml
bridge/: server.py  service_tools.py
docs/harness/: 00-PHILOSOPHY.md  NODE-WRAPPING.md
node-engine/: README.md  package-lock.json  package.json  tsconfig.json
node-engine/src/: index.ts  types.ts
node-engine/src/cli/: serve_mcp.ts
node-engine/src/pipeline/: pipeline.ts  stage.ts
node-engine/src/providers/: anthropic.ts  base.ts  openai.ts
node-engine/src/spec/: schema.ts
node-engine/src/stages/: _topology.ts  index.ts  s01_input.ts  s02_history.ts  s03_prompt.ts  s04_tool.ts  s05_policy.ts  s05_strategy.ts  s06_context.ts  s07_act.ts  s08_judge.ts  s09_decide.ts  s10_save.ts  s11_finalize.ts
node-engine/src/tools/: builtins.ts  dispatch.ts
src/: builder.rs  events.rs  lib.rs  main.rs  python.rs  stdio.rs  stdio_main.rs
src/api/: http.rs  mod.rs  sse.rs
src/context/: memory.rs  mod.rs  sections.rs  window.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  provider.rs  streaming.rs
src/mcp/: client.rs  mod.rs  protocol.rs
src/stages/: bootstrap.rs  classify.rs  context_build.rs  context_compact.rs  decide.rs  execute.rs  init.rs  llm_call.rs  memory_read.rs  memory_write.rs  mod.rs  plan.rs  recover.rs  tool_discovery.rs  tool_execute.rs  validate.rs
src/state_machine/: agent_executor.rs  mod.rs  orchestrator.rs  stage.rs
src/tools/: mod.rs  orchestration.rs  registry.rs
src/workflow/: converter.rs  db.rs  definition.rs  mod.rs
tests/: integration_test.rs  test_dedupe.py  test_error_hierarchy.py  test_evidence.py  test_evidence_tools.py  test_external_inputs_secret.py  test_forge.py  test_history_max.py  test_hitl_and_compact.py  test_import_smoke.py  test_memory_activity.py  test_memory_lifecycle.py  test_memory_refine.py  test_memory_repro.py  test_plan_fingerprint.py  test_recall.py  test_recall_tools.py  test_runtime_config.py  test_tool_diversity_guard.py
tests/fingerprints/: plan_filters_unknown_stage.json  plan_injects_required.json  plan_malformed_types_defended.json  plan_rag_with_judge.json  plan_simple_qa.json
web/: .env.example  docker-compose.yml
web/backend/: Dockerfile  main.py
web/frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx  index.css
xgen_harness/: EXECUTION_DESIGN.md  EXECUTION_DESIGN_V2.md  REFACTORING_PLAN.md  REFACTORING_PLAN_V2.md  __init__.py
xgen_harness/adapters/: __init__.py  embedders.py  node_adapters.py  qdrant.py  resource_registry.py  xgen.py
xgen_harness/api/: __init__.py  router.py
xgen_harness/capabilities/: __init__.py  matcher.py  materializer.py  parameter_resolver.py  registry.py  schema.py
xgen_harness/compile/: __init__.py  _env_hints.py  deps.py  external_inputs.py  gallery.py  local_manifest.py  mcp_server.py  nom_compile.py  npm_pack.py  npm_spec.py  python_compile.py  python_pack.py  snapshot.py  wheel.py
xgen_harness/compile/templates/: __init__.py
xgen_harness/config/: __init__.py  sources.py
xgen_harness/core/: __init__.py  active_policies.py  artifact.py  builder.py  builtin_resource_providers.py  catalog.py  config.py  execution_context.py  fs_scanner.py  llm_call.py  node_plugin.py  nom.py  orchestrator_registry.py  phase_registry.py  pipeline.py  planner.py  presets.py  provider_bootstrap.py  registry.py  resource_providers.py  runtime_config.py  runtime_defaults.py  sandbox.py  sandbox_verifiers.py  service_registry.py  services.py  session.py  stage.py  stage_config.py  stage_io.py  state.py  state_loop.py  strategy_resolver.py  top_level_field_schema.py
xgen_harness/errors/: __init__.py  hierarchy.py
xgen_harness/events/: __init__.py  emitter.py  stdout_logger.py  types.py
xgen_harness/forge/: __init__.py  algebra.py  gepa.py  loop.py  objective.py  reflect.py  runner.py  signals.py  synthesis.py
xgen_harness/integrations/: __init__.py  cluster_sync.py  config_client.py  harness_router_patch.py  node_control_policy.json  workflow_bridge.py  xgen_node_adapters.py  xgen_services.py  xgen_streaming.py
xgen_harness/interfaces/: __init__.py  doc_service.py
xgen_harness/memory/: __init__.py  activity.py  dedupe.py  evidence.py  lifecycle.py  memory_store.py  progress.py  recall.py  refine.py  repro.py  state_bridge.py  store.py
xgen_harness/orchestrator/: __init__.py  complexity.py  dag.py  multi_agent.py  multi_agent_planner.py
xgen_harness/providers/: __init__.py  anthropic.py  base.py  langchain_adapter.py  openai.py
xgen_harness/stages/: __init__.py  interfaces.py  s01_input.py  s02_history.py  s02_memory.py  s03_prompt.py  s03_system_prompt.py  s04_tool.py  s04_tool_index.py  s05_plan.py  s05_strategy.py  s06_context.py  s07_llm.py  s08_act.py  s08_execute.py  s09_judge.py  s09_validate.py  s10_decide.py  s11_save.py  s12_complete.py  s12_finalize.py
xgen_harness/stages/s00_harness/: __init__.py  stage.py
xgen_harness/stages/s01_input/: __init__.py  stage.py
xgen_harness/stages/s02_history/: __init__.py  stage.py
xgen_harness/stages/s03_prompt/: __init__.py  stage.py
xgen_harness/tools/: __init__.py  base.py  builtin.py  frozen_source.py  gallery.py  mcp_client.py  ontology_tool.py  rag_tool.py  skill_registry.py  synthesis.py  term_expansion.py
xgen_harness/utils/: __init__.py  docs.py
(+68 files in other folders)
