[package]
name = "xgen-harness-executor"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "XGEN Harness Executor — Rust 상태 머신 기반 에이전트 실행기"
repository = "https://gitlab.x2bee.com/xgen2.0/xgen-harness-executor"
license = "MIT"

[lib]
name = "xgen_harness_executor"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "xgen-harness-executor"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "xgen-harness-stdio"
path = "src/stdio_main.rs"
required-features = ["stdio"]

# ── Feature flags ─────────────────────────────────────────────
# - core (default): 상태 머신 + LLM + MCP + Builder
#   → 다른 Rust 서비스에서 라이브러리로 import 시 사용
# - server: HTTP 서버 (axum, CORS, JWT) + 바이너리
#   → 독립 서비스로 Docker 실행 시 사용
[features]
default = ["core", "stdio"]
core = []
stdio = ["core"]
server = ["core", "dep:axum", "dep:tower", "dep:tower-http", "dep:hyper", "dep:jsonwebtoken"]

# ── Core dependencies (항상 포함) ─────────────────────────────
[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# HTTP client (LLM API calls, MCP HTTP transport)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "http2", "gzip", "rustls-tls"] }

# Web framework — server feature에서만 사용
axum = { version = "0.7", features = ["macros", "http1", "http2", "json", "tokio"], optional = true }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Identity
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Config
dotenvy = "0.15"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["clock", "serde"] }

# Database (execution logs) — core에서도 MemoryWrite가 사용
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-rustls"] }

# Redis (session state)
redis = { version = "0.25", features = ["tokio-comp"] }

# ── Server-only dependencies ──────────────────────────────────
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"], optional = true }
hyper = { version = "1", features = ["full"], optional = true }
jsonwebtoken = { version = "9", optional = true }


[profile.release]
codegen-units = 16
lto = "thin"
opt-level = "z"
