[project]
name = "xgen-harness"
version = "0.11.16"
description = "XGEN Harness Pipeline Library — 12-stage dual-abstraction agent pipeline + workflow compiler (wheel/MCP)"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "김진수", email = "wlstn010203@plateer.com"},
]
readme = "README.md"
keywords = ["agent", "pipeline", "harness", "llm", "xgen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
mcp = [
    "mcp>=0.9",
]

[project.urls]
Repository = "https://github.com/jinsoo96/xgen-harness-executor"

# ─── 외부 패키지 확장 통로 ───
# 외부 패키지가 자기 pyproject.toml 의 [project.entry-points."xgen_harness.<group>"] 에
# 항목 추가하면 xgen-harness 부팅 시 자동 발견 + register. 라이브러리 소스 수정 0.
# 빈 본 섹션은 외부 작업자 lock-in — 그룹 이름이 어떤 것이 valid 인지 명시.
[project.entry-points."xgen_harness.stages"]
# 예: s04_tool_index__lotte = "lotte_stages.tool_index:LotteToolIndexStage"

[project.entry-points."xgen_harness.strategies"]
# 예: "s07_llm:default:my_strategy" = "my_pkg.strategies:MyStrategyClass"

[project.entry-points."xgen_harness.node_adapters"]
# 예: my_category = "my_pkg.adapters:get_adapter"

[project.entry-points."xgen_harness.option_sources"]
# 예: my_source = "my_pkg:get_spec"   # () -> OptionSourceSpec

[project.entry-points."xgen_harness.tool_sources"]
# 예: my_tools = "my_pkg.tools:MyToolSource"

[project.entry-points."xgen_harness.providers"]
# 예: my_provider = "my_pkg.providers:MyProvider"

[project.entry-points."xgen_harness.capabilities"]
# 예: my_capability = "my_pkg.capabilities:get_spec"

[project.entry-points."xgen_harness.fan_out_strategies"]
# 예: per_intent = "my_pkg.orchestrator:per_intent_builder"

[project.entry-points."xgen_harness.evaluation_criteria"]
# 예: korean_quality = "my_pkg.criteria:get_spec"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xgen_harness*"]

# v0.8.38+ 노드 파라미터 control policy JSON 을 휠에 포함
# v0.10.0+ 컴파일러 템플릿은 순수 Python 문자열이라 package-data 불필요 (templates/__init__.py 에 내장)
[tool.setuptools.package-data]
"xgen_harness" = ["integrations/*.json"]
