[project]
name = "xgen-harness"
version = "0.16.3"
description = "XGEN Harness — XGEN_HARNESS_PRELOAD_MANIFEST env 기반 도구 자동 주입 (Tool Synthesis 번들 이식)"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "김진수", email = "wlstn010203@plateer.com"},
]
readme = "README.md"
keywords = ["agent", "pipeline", "harness", "llm", "xgen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
mcp = [
    "mcp>=0.9",
]

[project.urls]
Repository = "https://github.com/jinsoo96/xgen-harness-executor"

# ─── 외부 패키지 확장 통로 ───
# 외부 패키지가 자기 pyproject.toml 의 [project.entry-points."xgen_harness.<group>"] 에
# 항목 추가하면 xgen-harness 부팅 시 자동 발견 + register. 라이브러리 소스 수정 0.
# 빈 본 섹션은 외부 작업자 lock-in — 그룹 이름이 어떤 것이 valid 인지 명시.
[project.entry-points."xgen_harness.stages"]
# 예: s04_tool_index__lotte = "lotte_stages.tool_index:LotteToolIndexStage"

[project.entry-points."xgen_harness.strategies"]
# 예: "s07_llm:default:my_strategy" = "my_pkg.strategies:MyStrategyClass"

[project.entry-points."xgen_harness.node_adapters"]
# 예: my_category = "my_pkg.adapters:get_adapter"

[project.entry-points."xgen_harness.option_sources"]
# 예: my_source = "my_pkg:get_spec"   # () -> OptionSourceSpec

[project.entry-points."xgen_harness.tool_sources"]
# 예: my_tools = "my_pkg.tools:MyToolSource"

[project.entry-points."xgen_harness.providers"]
# 예: my_provider = "my_pkg.providers:MyProvider"

[project.entry-points."xgen_harness.capabilities"]
# 예: my_capability = "my_pkg.capabilities:get_spec"

[project.entry-points."xgen_harness.fan_out_strategies"]
# 예: per_intent = "my_pkg.orchestrator:per_intent_builder"

[project.entry-points."xgen_harness.evaluation_criteria"]
# 예: korean_quality = "my_pkg.criteria:get_spec"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xgen_harness*"]

# v0.8.38+ 노드 파라미터 control policy JSON 을 휠에 포함
# v0.10.0+ 컴파일러 템플릿은 순수 Python 문자열이라 package-data 불필요 (templates/__init__.py 에 내장)
[tool.setuptools.package-data]
"xgen_harness" = ["integrations/*.json"]

# ─── v0.11.21 — 타입체커 gate (점진 도입) ───
# code review 등급 C+ (타입 안전성) → B+ 로 끌어올리는 baseline.
# 지금은 relaxed — Any 남발을 하루에 지울 수 없으니 strict 플래그는 0.
# CI/로컬에서 `mypy xgen_harness` 가 실행 가능한 상태만 확보. 이후 모듈별 strict 승격 예정.
[tool.mypy]
python_version = "3.10"
# 외부 의존성이 타입 스텁 없이 와도 blocker 되지 않도록 silence.
ignore_missing_imports = true
# relaxed baseline — strict flag 하나하나 켜서 회귀 방지하며 진입.
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = true
# 변경 감지 빨라지도록 캐시 루트 고정.
cache_dir = ".mypy_cache"
# 플러그인 미사용 — dataclasses/Protocol 은 네이티브 해석에 맡긴다.
plugins = []

# 모듈별 strict 승격은 여기에 [[tool.mypy.overrides]] 로 추가.
[[tool.mypy.overrides]]
module = "xgen_harness.core.*"
# core/ 만 우선 엄격화 — 외부 의존 없고 PipelineState/HarnessConfig 가 진입점이라 타입 안전성 효과 큼.
# 단 Any 필드가 아직 남아 있어 warn_return_any 는 유예.
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
