[project]
name = "xgen-harness"
version = "1.5.3"
description = "XGEN Harness v1.5.3 — EventLog 디버깅 친화 강화. (1) ToolDeferredEvent 항상 emit (selected_tools 비어도) — 도구 선택 결과 가시. (2) s05_policy 진입 시 활성 가드 list 를 verbose 이벤트로 emit — '정책 안 먹힘' 디버깅 정보 표면화. 동작 변경 0 (가시성만)."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "김진수", email = "wlstn010203@plateer.com"},
]
readme = "README.md"
keywords = ["agent", "pipeline", "harness", "llm", "xgen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
mcp = [
    "mcp>=0.9",
]

[project.urls]
Repository = "https://github.com/jinsoo96/xgen-harness-executor"

# ─── 외부 패키지 확장 통로 ───
# 외부 패키지가 자기 pyproject.toml 의 [project.entry-points."xgen_harness.<group>"] 에
# 항목 추가하면 xgen-harness 부팅 시 자동 발견 + register. 라이브러리 소스 수정 0.
# 빈 본 섹션은 외부 작업자 lock-in — 그룹 이름이 어떤 것이 valid 인지 명시.
[project.entry-points."xgen_harness.stages"]
# 예: s04_tool_index__lotte = "lotte_stages.tool_index:LotteToolIndexStage"

[project.entry-points."xgen_harness.strategies"]
# 예: "s07_llm:default:my_strategy" = "my_pkg.strategies:MyStrategyClass"

[project.entry-points."xgen_harness.node_adapters"]
# 예: my_category = "my_pkg.adapters:get_adapter"

[project.entry-points."xgen_harness.tool_sources"]
# 예: my_tools = "my_pkg.tools:MyToolSource"

[project.entry-points."xgen_harness.providers"]
# 예: my_provider = "my_pkg.providers:MyProvider"

[project.entry-points."xgen_harness.capabilities"]
# 예: my_capability = "my_pkg.capabilities:get_spec"

[project.entry-points."xgen_harness.fan_out_strategies"]
# 예: per_intent = "my_pkg.orchestrator:per_intent_builder"

[project.entry-points."xgen_harness.evaluation_criteria"]
# 예: korean_quality = "my_pkg.criteria:get_spec"

[project.entry-points."xgen_harness.orchestrators"]
# 예: swarm_v2 = "my_pkg.orchestrator:swarm_v2_factory"

[project.entry-points."xgen_harness.sandbox_verifiers"]
# 예: my_verifier = "my_pkg.sandbox:MyVerifier"

[project.entry-points."xgen_harness.tools"]
# 갤러리 자동 발견 — wheel 컴파일 후 `pip install xgen-gallery-…` 시 자동 합류.
# 예: my_gallery = "my_pkg.tools:get_gallery"

[project.entry-points."xgen_harness.phases"]
# 예: post_egress = "my_pkg.phases:get_phase_spec"   # () -> {name, upper_order, description}

[project.entry-points."xgen_harness.node_plugins"]
# 예: my_node = "my_pkg.node:get_manifest"   # () -> NodePluginManifest

[project.entry-points."xgen_harness.model_pricing"]
# 예: my_model = "my_pkg.pricing:get_pricing"   # () -> {input, output, cache_read?, cache_write?}

[project.entry-points."xgen_harness.term_expanders"]
# search_tools 의 query 확장 expander (v0.26.20+).
# 한국어/일본어/도메인 특화 alias 같은 데이터는 엔진 본체에 박지 않고 plug 로 합류.
# 예: ko_locale = "xgen_harness_locale_ko:KoreanAliasExpander"
#     - .expand(terms: list[str]) -> list[str] 메서드 갖는 객체 (TermExpander Protocol)

# Policy Gate (v0.17.0) — 도구 호출/입력/출력/루프 경계 Guard.
# 내장 5종을 이 그룹에 등록 — 외부 기여자도 같은 경로로 추가하면 자동 합류.
[project.entry-points."xgen_harness.guards"]
token_budget      = "xgen_harness.stages.strategies.guard:TokenBudgetGuard"
cost_budget       = "xgen_harness.stages.strategies.guard:CostBudgetGuard"
iteration         = "xgen_harness.stages.strategies.guard:IterationGuard"
content           = "xgen_harness.stages.strategies.guard:ContentGuard"
tool_precondition = "xgen_harness.stages.strategies.guard_precondition:ToolPreconditionGuard"
hitl              = "xgen_harness.stages.strategies.guard:HITLGuard"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xgen_harness*"]

# v0.10.0+ 컴파일러 템플릿은 순수 Python 문자열이라 package-data 불필요.
# v0.22.0+ integrations/ 삭제 — xgen 특화 정책 JSON 은 이식 측(harness_bridge) 소유.

# ─── v0.11.21 — 타입체커 gate (점진 도입) ───
# code review 등급 C+ (타입 안전성) → B+ 로 끌어올리는 baseline.
# 지금은 relaxed — Any 남발을 하루에 지울 수 없으니 strict 플래그는 0.
# CI/로컬에서 `mypy xgen_harness` 가 실행 가능한 상태만 확보. 이후 모듈별 strict 승격 예정.
[tool.mypy]
python_version = "3.10"
# 외부 의존성이 타입 스텁 없이 와도 blocker 되지 않도록 silence.
ignore_missing_imports = true
# relaxed baseline — strict flag 하나하나 켜서 회귀 방지하며 진입.
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = true
# 변경 감지 빨라지도록 캐시 루트 고정.
cache_dir = ".mypy_cache"
# 플러그인 미사용 — dataclasses/Protocol 은 네이티브 해석에 맡긴다.
plugins = []

# 모듈별 strict 승격은 여기에 [[tool.mypy.overrides]] 로 추가.
[[tool.mypy.overrides]]
module = "xgen_harness.core.*"
# core/ 만 우선 엄격화 — 외부 의존 없고 PipelineState/HarnessConfig 가 진입점이라 타입 안전성 효과 큼.
# 단 Any 필드가 아직 남아 있어 warn_return_any 는 유예.
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# v0.22.0 — test_*.py 는 레포 루트에 직접 위치. 이전 설정(`tests/`) 은 존재하지 않는
# 디렉터리를 가리켜 `pytest` 가 0 건 수집하던 오래된 잔재였음.
testpaths = ["."]
python_files = ["test_*.py"]
